c - crash     b - bug fix    e - enhancement    f - new feature  n - note


5.0.3
  b - TRQ-3232. Start threadpool at pbs_mom start.
  b - TRQ-2675. Fix small errors in suse init.d scripts.
  e - TRQ-3104. Add millisecond precision to the Torque log file (backported from 5.1.1)
  e - TRQ-2881. Add node health check error messages to a node's notes and therefore pbsnodes
      output.
  e - TRQ-3098. Add the ability to set a parameter exit_code_canceled_job to force all
      canceled jobs to have the same exit code regardless of the state they were in
      when they were canceled.
  e - TRQ-2836. Make node health check run on sister nodes when configured for job
      start and job end as well. (backported from 5.1.2)
  e - TRQ-2843. Add the qmgr setting dont_write_nodes_file to make it so that nodes
      cannot be edited dynamically
  f - TRQ-2897. Add the ability to adopt running processes into a job with pbs_track.
  b - TRQ-3189. Never delete a running job because of a dependency. (backported from 5.1.2)



5.0.2
  b - TRQ-3029. Make it so that pbs_server can't have active threads when the main
      thread exits.
  b - TRQ-3012. Fix memory leaks that happen each time a job is run.
  b - TRQ-2966. Improved job rerun speed which had been significantly slowed down
      starting in 4.2.6. Also, pbs_mom now correctly accounts for job resources when
      user jobs call setsid more than once.
  c - TRQ-2987. Fix a crash around job exits due to incorrect error code handling.
  b - TRQ-2841. Fix some ways that max_user_queuable can become incorrect
  b - TRQ-2947. Fix a race condition on deleting jobs which are failing to start.
  c - TRQ-3068. Fix a race condition where a job may be deleted but have it's pointer
      may still be in the alljobs container. (backported from 5.1.1)
  b - TRQ-2332. Fix a job dependency problem when the failover server comes up. This
      only affects users running high availability. (backported from 5.1.1)